Post status can now be specified using the status: tag.
Post status setting was renamed to Default Post Status and moved to the Message tab.

= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.6.11 (future) =
* Call wp_set_current_user() so that other WP functions that depend on the current user work correctly.

= 1.6.10 (2015-1-2) =
* Testing against 4.1
* New icon in admin

= 1.6.9 (2014.12.1) =
* Post status list is now read from WordPress settings, rather than being a hard-coded list.
* Settings look & feel matching WP default style.
* Testing against WP 4.0.1

= 1.6.8 (2014.11.14) =
* Fixed bug where the #img tag was being used as the subject if it is the very first line in the email.
* Fixed bug where the allow subject in body setting was being ignored.

= 1.6.7 (2014.11.05) =
* Fixed bug where base64 text with utf-8 charset was trying to convert encoding to utf-8

= 1.6.6 (2014.10.29) =
* Add additional debugging to isValidSmtpServer
* Add Japanese translation
* Fixed bug where a subject present in the body is not recognized

= 1.6.5 (2014.10.22) =
* Fixed charset encoding bug when there wasn't a content-transfer-encoding header
* Upgraded simple_html_dom 

= 1.6.4 (2014.10.21) =
* Provide post url in success email

= 1.6.3 (2014.10.03) =
* Added postie_filter_email2 filter which includes To and Reply-To headers
* Added postie_author filter
* Revised help/support page

= 1.6.2 (2014.09.22) =
* Moved FAQ and Help to PostiePlugin.com
* Fixed file type issue with wp_handle_upload_prefilter()
* Fixed cron issue

= 1.6.1 (2014.09.19) =
* Allow negative time corrections
* Fix links to settings page
* Misc UI updates

= 1.6.0 (2014.09.18) =
* Updated remote cron url to be more compatible with Wordpress
* The Postie menu has been moved out of the Settings menu to the top level
* Tested with Wordpress 4.0

= 1.5.24 (2014.08.12) =