@@ -1,5 +1,8 @@
 <?php
-http_response_code(403);
+//http_response_code(403);
+$protocol = (isset($_SERVER['SERVER_PROTOCOL']) ? $_SERVER['SERVER_PROTOCOL'] : 'HTTP/1.0');
+header("$protocol 403 Forbidden");
+$GLOBALS['http_response_code'] = $code;
 ?>
 <html>
     <head>
